--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <meta property="og:description"
         content="Comprehensive Exhibition, Trade Fair & Book Fair services in Dubai. Specializing in groceries, construction, logistics, spices, and jewelry sectors.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://ayubovan-anora.com">
-    <meta property="og:image" content="https://ayubovan-anora.com/images/og-image.jpg">
+    <meta property="og:url" content="https://ayubowan-anora.com/">
+    <meta property="og:image" content="https://ayubowan-anora.com//images/logo.png">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
